2007-12-20  Zoltan Varga  <vargaz@gmail.com>

	* cpu-amd64.md mini-amd64.h mini-amd64.c inssel-amd64.brg: Add ulong->double 
	implementation.

	* basic-float.cs: Add an ulong->double cast test.

2007-12-15  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mono_method_to_ir): Fix a warning.

2007-12-14  Zoltan Varga  <vargaz@gmail.com>

	* mini-ops.h: Add OP_SWITCH.

	* mini.c graph.c ssa.c aliasing.c mini-<ARCH>.c inssel-<ARCH>.brg: Avoid using
	CEE_SWITCH in back-end code, use OP_SWITCH instead.

2007-12-11  Geoff Norton  <gnorton@novell.com>

	* mini-s390x.c: Minor change to the MAX() define to allow
	it to compile with other gcc versions.

2007-12-11  Geoff Norton  <gnorton@novell.com>

	* cpu-s390x.md:
	* mini-s390x.c: Implement sext_i4 to fix the build on s390x

2007-12-11  Rodrigo Kumpera  <rkumpera@novell.com>

	exceptions-arm.c (mono_arch_get_restore_context): Restore
	the frame pointer.

	exceptions-arm.c (throw_exception): Save the frame pointer.
	This is a partial fix for #323747. Only the client side is
	fixed.

2007-12-11  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini.c (mono_method_to_ir): Verbose message in CEE_NEWOBJ
	was using an unrelated variable to log the class which
	needed the cctor to be called. This was crashing on arm.

2007-12-09  Robert Jordan  <robertj@gmx.net>

	* mini-x86.c (mono_arch_emit_epilog):
	Consider all kinds of 64-bit types. Fixes #323114.

2007-12-08  Zoltan Varga  <vargaz@gmail.com>

	* tramp-amd64.c (mono_arch_create_trampoline_code): Clean up the code a bit.

2007-12-07  Zoltan Varga  <vargaz@gmail.com>

	* mini-amd64.c (peephole_pass): Add a missing instruction check.

Fri Dec 7 22:08:23 CET 2007 Paolo Molaro <lupus@ximian.com>

	* mini.c: run type ctor before allocating an object, not only
	when running it's constructor method (fixes at least part of bug #342507).

2007-12-07  Zoltan Varga  <vargaz@gmail.com>
	
	* mini-trampolines.c (mono_delegate_trampoline): Fix a warning.
	